Runs! An infinite loop... Need to double check the asserts...

--- a/GAP.vcproj
+++ b/GAP.vcproj
@@ -324,6 +324,14 @@
 				RelativePath=".\minknap.c"
 				>
 				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						CompileAsManaged="0"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="Release|Win32"
 					>
 					<Tool
